# FBA-Core-Agents

./: .env  .gitignore  Dockerfile  LICENSE  api.py  embed_data.py  env.yml  init_hybrid_search.py  main.py  pyproject.toml  requirements.txt  temp.py
src/: bert_embedding.py  main.py  models.py  optimized_workflow.py  prompts.py  workflow.py
src/agent/: analyst_agent.py  base_agent.py  receptionist_agent.py  reflector_agent.py  search_agent.py  specialist_agent.py  summarizer_agent.py  validator_agent.py
src/agents/: analyst_agent.py  receptionist_agent.py  specialist_agent.py  summarizer_agent.py
src/api/: endpoints.py  schemas.py
src/config/: setting.yaml
src/core/: embedding.py  llm.py  search_engine.py
src/data/: BigCompany.json  Investor.json  Personal.json  SmallBusiness.json
src/data/internal/: about_us_normalized.json  credit_card_normalized.json  promotion_normalized.json  qna_normalized.json  tips_normalized.json
src/data/raw/: about_us.json  credit_cards.json  promotions.json  qna.json  tips_and_share.json
src/model/: analyst_response.py  receptionist_response.py  reflector_response.py  search_result.py  validator_response.py  workflow_state.py
src/models/: question_analysis.py  specialist_response.py  workflow_state.py
src/prompt/: formatter_prompt.py  receptionist_prompt.py  reflector_prompt.py  summarizer_prompt.py  validator_prompt.py
src/prompts/: analyst_prompt.py  specialist_prompt.py
src/service/embedding/: aws_embedder.py  (+1 more)
src/utils/: data_normalize.py  hybrid_search.py  logger.py
test/: chat.py  chat_template.json
(+4 files in other folders)
