[project]
name = "core_agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "flask>=3.1.1",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-google-genai>=2.1.6",
    "langchain-openai>=0.3.25",
    "langgraph>=0.4.9",
    "nltk>=3.9.1",
    "numpy>=2.3.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-dotenv>=1.1.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
]
